--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -2,9 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  
   "main": "server.js",
-  
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js"
@@ -13,12 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.6.2",
     "apollo-server-express": "^3.7.0",
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^16.5.0",
-    
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
